@@ -18,6 +18,12 @@
 	* src/gnome-cmd-user-actions.cc:
 	GnomeCmdFileList: more C++ rework
 
+	* src/gnome-cmd-dir.h:
+	* src/gnome-cmd-file-list.cc:
+	* src/gnome-cmd-file-list.h:
+	* src/gnome-cmd-file-selector.cc:
+	Move code from update_files(GnomeCmdFileSelector *fs) to GnomeCmdFileList::show_files(GnomeCmdDir *dir)
+
 2008-09-11  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-data.cc:
